Simplify generation of .env

--- a/.env.template
+++ b/.env.template
@@ -4,8 +4,8 @@ OUT_ISO_DIR=${CONTAINER_OUT_DIR}
 ISO_NAME=archlinux-cloud
 ISO_VERSION=$(date +%Y.%m.%d)
 ISO_LABEL=ARCH_$(date +%Y%m%d)
-ISO_PUBLISHER='Tatsuya Kitagawa <https://github.com/t13a/archlinux-cloud>'
-ISO_APPLICATION='Arch Linux Cloud Installation Image'
+ISO_PUBLISHER=Tatsuya Kitagawa <https://github.com/t13a/archlinux-cloud>
+ISO_APPLICATION=Arch Linux Cloud Installation Image
 ISO_INSTALL_DIR=
 
 # build/profile
