--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,11 @@ services:
 
 script:
 - make
+- echo "TRAVIS_BRANCH=${TRAVIS_BRANCH}"
+- echo "TRAVIS_TAG=${TRAVIS_TAG}"
+
+before_deploy:
+- export TRAVIS_TAG="${TRAVIS_TAG:-${TRAVIS_BRANCH}}"
 
 deploy:
   provider: releases
@@ -14,5 +19,6 @@ deploy:
   file: out/*.iso
   skip_cleanup: true
   on:
-    tags: true
+    all_branches: true
+    condition: "${TRAVIS_TAG:-${TRAVIS_BRANCH}}" =~ ^v[0-9]
   overwrite: true
